# telegram-bot-template

./: .gitignore  Dockerfile  LICENSE  README.md  babel.cfg  example.alembic.ini  pyproject.toml  ruff.toml
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
src/: .env.example  config.py  init_bot.py  run.py
src/alembic/: env.py
src/alembic/versions/: 35bcdcc601a2_initial_migration.py
src/callbacks/: __init__.py  lang.py
src/database/: __init__.py  base.py
src/database/models/: __init__.py  user.py
src/database/repositories/: __init__.py  user.py
src/handlers/: __init__.py
src/handlers/commands/: lang.py  start.py
src/middlewares/: i18n.py  rate_limit.py
src/schemas/: __init__.py  user.py
src/services/: i18n_service.py  messenger_service.py  redis_service.py  user_service.py
src/utils/: babel_locale.py  command_runner.py  i18n_aiogram.py  logger.py  migration_database.py  settings_bot.py
src/utils/keyboards/: __init__.py  builders.py  inline.py
