[project]
name = "telegram-bot-template"
version = "1.0.0"
description = "Add your description here"

authors = [{ name = "Ilnaz Mingaleev", email = "ilnazm1ngaleev@yandex.com" }]
readme = "README.md"

requires-python = "~=3.13.7"
dependencies = [
    "aiogram>=3.21.0",
    "pydantic-settings>=2.10.1",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
    "ruff>=0.12.1",
    "redis>=6.4.0",
    "babel>=2.17.0"
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[project.scripts]
start = "src.run:start"
migrate = "src.utils.migration_database:main"
babel = "src.utils.babel_locale:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"